--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,9 @@ jobs:
       - image: circleci/node:12.18.1
     steps:
       - checkout
-      - run: echo "hello world"
+      - run:
+          name: 最初の一歩
+          command: |
+            echo 'Hello World!'
+            echo 'This is the delivery pipeline'
 
