--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   test:
     docker:
-      - image: circleci/ruby:2.6.6
+      - image: circleci/ruby:2.6.6-buster-node
         environment:
           RAILS_ENV: "test"
           DB_USERNAME: "root"
