--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  slack: circleci/slack@3.4.2
+
 executors:
   test:
     docker:
@@ -78,3 +81,5 @@ jobs:
       - front_setup
       - db_setup
       - exec_spec
+      - slack/status:
+          webhook: ${SLACK_WEBHOOK}
